--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
             <p>软件描述：GitHub 是一个广泛使用的源代码管理工具和协作平台，特别适用于团队项目的开发和管理</p>
             <a href="https://www.123pan.com/s/Qqhgjv-2Jpw3" download>点击下载</a>
         </div>
+        <div>
+            <h3>Via浏览器</h3>
+            <p>软件描述：via浏览器手机版打造全新简约的手机浏览器，可以快速打开各种网页，选择网址一键复制到浏览器打开，没有广告插件可以自由使用，软件所占内存很小，可以体验纯净上网环境，只使用必备的权限，可以保护用户隐私，一键收藏网页，自动拦截弹出的广告，可以自定义快捷界面，安装上via浏览器插件就可以拓展全新功能</p>
+            <a href="https://www.123865.com/s/Qqhgjv-Qqhgjv-xgpw3" download>点击下载</a>
+        </div>
 </body>
 
 </body>
@@ -145,14 +150,14 @@
         </div>
     </div>
     <p style="text - align: center; margin - top: 20px;">网站制作人员：陈伊俊（QQ:2501113185）、林（QQ:757009986）</p>
-    <p style="text - align: center; margin - top: 20px;">技术支持：VSCode团队、GitHub所有团队、FoskfD(QQ：3828638473)</p>
+    <p style="text - align: center; margin - top: 20px;">技术支持：VSCode团队、GitHub所有团队、FoskfD(QQ：3828638473)=</p>
     <p style="text - align: center; margin - top: 20px;">QQ群：431982412</p>
     </body>
 </body>
     
 <div class="download-container">
 <div class="github - badge - big">
-    <span class="badge - subject"><i class="fa fa - clock - o"></i> 🕒本站已正常运行 </span>
+    <span class="badge - subject"><i class="fa fa - clock - o"></i> 🕒本网站已正常运行 </span>
     <span class="badge - value bg - apricots">
         <span id="blog_running_days" class="odometer odometer - auto - theme"></span>天
         <span id="blog_running_hours" class="odometer odometer - auto - theme"></span>小时
