--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div>
             <h3>Via浏览器</h3>
             <p>软件描述：via浏览器手机版打造全新简约的手机浏览器，可以快速打开各种网页，选择网址一键复制到浏览器打开，没有广告插件可以自由使用，软件所占内存很小，可以体验纯净上网环境，只使用必备的权限，可以保护用户隐私，一键收藏网页，自动拦截弹出的广告，可以自定义快捷界面，安装上via浏览器插件就可以拓展全新功能</p>
-            <a href="https://www.123865.com/s/Qqhgjv-Qqhgjv-xgpw3" download>点击下载</a>
+            <a href="https://www.123865.com/s/Qqhgjv-xgpw3" download>点击下载</a>
         </div>
 </body>
 
