--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
     </div>
     <p style="text - align: center; margin - top: 20px;">网站制作人员：陈伊俊（QQ:2501113185）、林（QQ:757009986）</p>
-    <p style="text - align: center; margin - top: 20px;">技术支持：VSCode团队、GitHub所有团队、FoskfD(QQ：3828638473)=</p>
+    <p style="text - align: center; margin - top: 20px;">技术支持：VSCode团队、GitHub所有团队、FoskfD(QQ：3828638473)</p>
     <p style="text - align: center; margin - top: 20px;">QQ群：431982412</p>
     </body>
 </body>
