--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <body>
     <h1>欢迎来到㍿の下载网站</h1>
-    <p style="text-align: center; color: red;">注意：下载错误或下载失败请联系网站制作人员</p>
+    <p style="text-align: center; color: red;">注意：下载错误或下载失败请联系网站制作人员！以下软件不是㍿制作，仅供学习交流使用！</p>
     <h2>Windows电脑软件(所有网盘提取码都是AMNS)</h2>
     <div class="download-container">
         <div>
@@ -145,7 +145,7 @@
 </body>
     </div>
         <div class="reward - container">
-            <h1>如果您觉得这个网站有对你产生帮助，请支持一下吧！</h1>
+            <h1>如果您觉得这个网站有对你产生帮助，请支持一下吧，你的支持是我更新网站的动力！</h1>
             <img src="/46F279156812A4B54AE2791AFE8A38BF.jpg" alt="微信打赏二维码" width="300" height="400">
         </div>
     </div>
