--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div>
             <h3>steam++</h3>
-            <p>软件描述：Steam++（Steam社区工具箱）官方正式版是一款很棒的steam游戏平台的辅助工具，Steam++不仅支持快速切换登录账号，能够在不同平台上相互同步使用</p>
+            <p>软件描述：Steam++（Steam社区工具箱）官方正式版是一款很棒的steam游戏平台的辅助工具，Steam++不仅支持快速切换登录账号，能够在不同平台上相互同步使用，可支持GitHub（网页）、steam服务、Twitch直播、Origin、Uplay、公共CDN、Google翻译、Spotify、国外验证码平台、Robox、Mod.io、Nexus Mods、网盘服务和其它网站等等，剩下的由站友们自由探索！</p>
             <a href="https://www.123pan.com/s/Qqhgjv-gJpw3" download>点击下载</a>
         </div>
         <div>
