--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <a href="https://www.123pan.com/s/Qqhgjv-GJpw3" download>点击下载</a>
         </div>
         <div>
-            <h3>GitHub汉化工具</h3>
-            <p>软件描述：GitHub汉化工具是一款为使用桌面版GitHub用全英文而不懂中文的同学，可以下载这个汉化工具，它可以将GitHub的界面和功能翻译成中文，让你更方便的使用GitHub</p>
+            <h3>GitHub Desktop汉化工具</h3>
+            <p>软件描述：GitHub Desktop汉化工具是一款为使用桌面版GitHub用全英文而不懂中文的同学，可以下载这个汉化工具，它可以将GitHub Desktop的界面和功能翻译成中文，让你更方便的使用GitHub Desktop</p>
             <a href="https://www.123pan.com/s/Qqhgjv-PJpw3" download>点击下载</a>
         </div>
         <div>
