--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <div>
             <h3>GitHub Desktop汉化工具</h3>
-            <p>软件描述：GitHub Desktop汉化工具是一款为使用桌面版GitHub用全英文而不懂中文的同学，可以下载这个汉化工具，它可以将GitHub Desktop的界面和功能翻译成中文，让你更方便的使用GitHub Desktop</p>
+            <p>软件描述：GitHub Desktop汉化工具是一款为使用桌面版GitHub用全英文而不懂中文的同学，可以下载这个汉化工具，它可以将GitHub的界面和功能翻译成中文，让你更方便的使用GitHub</p>
             <a href="https://www.123pan.com/s/Qqhgjv-PJpw3" download>点击下载</a>
         </div>
         <div>
@@ -139,6 +139,12 @@
             <h3>Via浏览器</h3>
             <p>软件描述：via浏览器手机版打造全新简约的手机浏览器，可以快速打开各种网页，选择网址一键复制到浏览器打开，没有广告插件可以自由使用，软件所占内存很小，可以体验纯净上网环境，只使用必备的权限，可以保护用户隐私，一键收藏网页，自动拦截弹出的广告，可以自定义快捷界面，安装上via浏览器插件就可以拓展全新功能</p>
             <a href="https://www.123865.com/s/Qqhgjv-xgpw3" download>点击下载</a>
+        </div>
+        <div>
+            <h3>X浏览器</h3>
+            <p>软件描述：X浏览器只申请极少的权限，无广告、无后台驻留服务、无消息推送，提供了很多的安全隐私设置选项，最大限度的保证了您的安全隐私；并且还可以自定X义浏览器首页；还可以无需安装第三方脚本管理器，内建支持油猴脚本(GreaseMonkey,Tampermonkey)，兼容大部分油猴脚本，极大的提升了浏览器的能力</p>
+            <a href="https://www.123pan.com/s/Qqhgjv-Cgpw3" download>点击下载</a>
+            </h3>
         </div>
 </body>
 
