--- a/xdfboom.html
+++ b/xdfboom.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>XDFBoom下载站</title>
-    <h1 style="text-align:center">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄制作的XDFBoom新下载站</h1>
-    <h3 style="text-align:center;">当前版本：V1.0 ©️XDFBoom Team | (̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ </h3>
-    <h4 style="text-align:center">新下载站地址：https://abc.cmzprep.top/xdfboom.html  不要记错啦！</h4>
-    <p style="text-align: center; color: red;">此网站与新东方教育科技集团有限公司没有任何关系！</p>
+    <title>安卓刷机破解下载站</title>
+    <h1 style="text-align:center">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄制作的安卓刷机调试下载站</h1>
+    <h3 style="text-align:center;">当前版本：V2.0 ©️(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ </h3>
+    <h3 style="text-align:center;">作者QQ:2139748337</h3>
+    <h4 style="text-align:center">新下载站地址：https://abc.cmzprep.top/flash.html  不要记错啦！</h4>
+    <p style="text-align: center; color: red;">此网站仅为个人创作，请勿用于商业！</p>
     <link rel = "icon" href = "tubiao.ico" type = "image/x-icon">
     <style>
         body {
@@ -51,24 +52,24 @@
     </style>
 </head>
 
-<body background="xdfboom_ background.png" 
+<body background="flash_ background.png" 
     style="background-repeat:no-repeat
     background-attachment:fixed;
     background-size:100% 100%; ">
 </body>
 
 <body>
-    <h2>XDF-N1刷机工具（提取码：npad）</h2>
+    <h2>刷机工具（提取码：npad）</h2>
     <br>
     <div class="download-container">
     <body>
         <h3>1.MTK_Client(gui版) </h3>
-        <p>简介：MTK_Client（简称mtkc）是一个十分方便的联发科处理器调试工具，使用图形化操作，学习机关机后按住三个键，连上电脑即可。可对学习机进行分区读写、解bl锁等实用操作，刷机必用，炒鸡推荐！</p>
+        <p>简介：MTK_Client（简称mtkc）是一个十分方便的联发科处理器调试工具，可对联发科处理器进行分区读写、解bl锁等实用操作，刷机必用，炒鸡推荐！</p>
         <a href="https://www.123pan.com/s/k4tFTd-XATZh?">点击下载</a>
     </body>
     <body>
         <h3>2.MTK_Client(非gui版)</h3>
-        <p>简介：MTK_Client（简称mtkc）是一个十分方便的联发科处理器调试工具，使用代码操作，学习机关机后按住三个键，连上电脑即可。可对学习机进行分区读写、解bl锁等实用操作，刷机必用，炒鸡推荐！</p>
+        <p>简介：MTK_Client（简称mtkc）是一个十分方便的联发科处理器调试工具，可对联发科处理器进行分区读写、解bl锁等实用操作，刷机必用，炒鸡推荐！</p>
         <a href="https://www.123pan.com/s/k4tFTd-nATZh?">点击下载</a>
     </body>
     <body>
@@ -78,41 +79,34 @@
     </body>
     <body>
         <h3>4.Scrcpy(gui版)</h3>
-        <p>简介：Scrcpy是一个可以在电脑上查看和控制学习机的实用软件，设备打开USB调试连接即可，比无线的延时率要低很多，方便自己或他人调试学习机！</p>
+        <p>简介：Scrcpy是一个可以在电脑上查看和控制设备的实用软件，设备打开USB调试连接即可，比无线的延时率要低很多，方便自己或他人调试设备！</p>
         <a href="https://www.123pan.com/s/k4tFTd-OATZh?">点击下载</a>
     </body>
     </div>
     <br>
 </body>
 <body>
-    <h2>XDF-N1常用软件（提取码：npad）</h2>
+    <h2>常用软件（提取码：npad）</h2>
     <div class="download-container">
         <body>
-            <h3>1.学习机软件(双改)</h3>
-            <p>简介：学习机软件(双改)是新东方XDF-N1的原版学习系统，使用他来让刷完机的学习机上课，不能更新，无需验证设备即可登入!</p>
-            <a href="https://www.123pan.com/s/k4tFTd-09TZh?">点击下载</a>
-        </body>
-        <body>
-            <h3>2.学习机软件(原版)</h3>
-            <p>简介：学习机软件(原版)是新东方XDF-N1的原版学习系统，使用他来让刷完机的学习机上课，可以更新，需使用Magisk模块来登入!</p>
-            <a href="https://www.123pan.com/s/k4tFTd-K9TZh?">点击下载</a>
-        </body>
-        <body>
-            <h3>3.Kitsure-Magisk</h3>
+            <h3>1.Kitsure-Magisk</h3>
             <p>简介：Kitsure-Magisk(狐妖面具)是一个可以获取设备最高权限，刷写设备底层的工具，通过刷入模块或给予软件最高权限来自定义设备！</p>
             <a href="https://www.123pan.com/s/k4tFTd-j9TZh?">点击下载</a>
         </body>
         <body>
-            <h3>4.华为应用市场</h3>
-            <p>通过华为应用市场来在学习机上安装软件，软件种类丰富，但大部分手游是渠道版，可用edge浏览器安装手游！</p>
+            <h3>2.华为应用市场</h3>
+            <p>通过华为应用市场来安装软件，软件种类丰富！</p>
             <a href="https://www.123pan.com/s/k4tFTd-TQTZh?">点击下载</a>
         </body>
         <body>
-            <h3>5.Edge浏览器(安卓版)</h3>
-            <p>通过Edge浏览器来在学习机上访问网站，类似于电脑的操作界面，让人很好上手！</p>
+            <h3>3.Edge浏览器(安卓版)</h3>
+            <p>通过Edge浏览器来访问网站，类似于电脑的操作界面，让人很好上手！</p>
             <a href="https://www.123pan.com/s/k4tFTd-5QTZh">点击下载</a>
         </body>
     </div>
+</body>
+<body>
+    
 </body>
 <body> <!--赞助-->
     <br>
@@ -124,8 +118,8 @@
 </body>
 <br>
 <body>
-    <p style="color: darkorchid">网站主作人员：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄  网站辅助人员：㍿ 下载站文件：XDFBoom团队</p>
-    <p style="color: darkorchid">技术支持：GitHub & openfrp & 123云盘 宣传支持：CSDN博客 对赞助及支持者鸣谢！</p>
+    <p style="color: darkorchid">网站主作人员：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄  网站辅助人员：㍿ 下载站文件提供：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄</p>
+    <p style="color: darkorchid">技术支持：GitHub & openfrp & 123云盘 对赞助及支持者鸣谢！</p>
 </body>
 
 <script>
