--- a/flash.html
+++ b/flash.html
@@ -5,7 +5,7 @@
     <h1 style="text-align:center">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄制作的安卓刷机调试下载站</h1>
     <h3 style="text-align:center;">当前版本：V2.0 ©️(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ </h3>
     <h3 style="text-align:center;">作者QQ:2139748337</h3>
-    <h4 style="text-align:center">新下载站地址：https://abc.cmzprep.top/flash.html  不要记错啦！</h4>
+    <h4 style="text-align:center">新下载站地址：https://cyj.cmzprep.top/flash.html  不要记错啦！</h4>
     <p style="text-align: center; color: red;">此网站仅为个人创作，请勿用于商业！</p>
     <link rel = "icon" href = "tubiao.ico" type = "image/x-icon">
     <style>
