--- a/flash.html
+++ b/flash.html
@@ -52,7 +52,7 @@
     </style>
 </head>
 
-<body background="/flash_ background.png" 
+<body background="flash_ background.png" 
     style="background-repeat:no-repeat
     background-attachment:fixed;
     background-size:100% 100%; ">
