--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div>
             <h3>Gopeed</h3>
             <p>软件描述：Gopeed(全称 Go Speed)是一个 Go + Flutter 开发的下载器，界面简洁美观，功能强大，支持（HTTP、BitTorrent、Magnet）协议，支持全平台</p>
-            <a href="】https://www.123865.com/s/Qqhgjv-BGpw3" download>点击下载</a>
+            <a href="https://www.123865.com/s/Qqhgjv-BGpw3" download>点击下载</a>
         </div>
 </body>
 
