--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
     <h1>欢迎来到㍿の下载网站</h1>
     <p style="text-align: center; color: red;">注意：下载错误或下载失败请联系网站制作人员！以下软件不是㍿（QQ名）制作，仅供学习交流使用！</p>
-    <h2>Windows电脑软件(所有网盘提取码都是AMNS)</h2>
+    <h2>Windows电脑软件(以下软件全部都是64位电脑专用，且所有网盘提取码都是AMNS)</h2>
     <div class="download-container">
         <div>
             <h3>Geek Uninstaller</h3>
@@ -122,6 +122,11 @@
             <h3>Gopeed</h3>
             <p>软件描述：Gopeed(全称 Go Speed)是一个 Go + Flutter 开发的下载器，界面简洁美观，功能强大，支持（HTTP、BitTorrent、Magnet）协议，支持全平台</p>
             <a href="https://www.123865.com/s/Qqhgjv-BGpw3" download>点击下载</a>
+        </div>
+        <div>
+            <h3>BandZip</h3>
+            <p>软件描述：Bandizip 是一款可靠和快速的压缩软件，支持中文，支持 WinZip、7-Zip 和 Winrar 以及其它压缩格式。拥有非常快速的压缩和解压缩的算法，适用于多核心压缩、快速拖放、高速压缩等功能</p>
+            <a href="https://www.123865.com/s/Qqhgjv-JGpw3" download>点击下载</a>
         </div>
 </body>
 
