--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>下载网站</title>
+    <title>实用软件站（网址。软件）</title>
     <link rel = "icon" href = "/bitbug_favicon.ico" type = "image/x-icon">
     <style>
         body {
@@ -59,8 +59,8 @@
 
 
 <body>
-    <h1>欢迎来到㍿の下载网站</h1>
-    <p style="text-align: center; color: red;">注意：下载错误或下载失败请联系网站制作人员！以下软件不是㍿（QQ名）制作，仅供学习交流使用！</p>
+    <h1>欢迎来到chennyの实用软件网址站</h1>
+    <p style="text-align: center; color: red;">注意：下载错误或下载失败请联系网站制作人员！以下软件不是chenny（QQ名）制作，仅供学习交流使用！</p>
     <h2>Windows电脑软件(以下软件全部都是64位电脑专用，且所有网盘提取码都是AMNS)</h2>
     <div class="download-container">
         <div>
@@ -170,7 +170,7 @@
             <img src="/46F279156812A4B54AE2791AFE8A38BF.jpg" alt="微信打赏二维码" width="300" height="400">
         </div>
     </div>
-    <p style="text - align: center; margin - top: 20px;">网站制作人员：陈伊俊（QQ名：㍿；QQ:2501113185）、林（QQ:757009986）</p>
+    <p style="text - align: center; margin - top: 20px;">网站制作人员：陈伊俊（QQ名:chenny;QQ:2501113185）、林（QQ名:林;QQ:757009986）</p>
     <p style="text - align: center; margin - top: 20px;">技术支持：VSCode团队、GitHub所有团队、FoskfD(QQ：3828638473)</p>
     <p style="text - align: center; margin - top: 20px;">QQ群：431982412</p>
     </body>
