--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>实用软件站（网址。软件）</title>
+    <title>实用软件站</title>
     <link rel = "icon" href = "/bitbug_favicon.ico" type = "image/x-icon">
     <style>
         body {
