--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>简易主页</title>
+    <link rel = "icon" href = "/bitbug_favicon.ico" type = "image/x-icon">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+        }
 
+       .gradient-text {
+            background-image: linear-gradient(to bottom, #ff6600, #ffcc00);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-fill-color: transparent;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+       .download-container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-top: 50px;
+            text-align: center;
+        }
+
+       .github-badge-big.badge-subject {
+            font-size: 18px;
+            color: #555;
+            margin-bottom: 10px;
+        }
+
+       .github-badge-big.badge-value {
+            font-size: 24px;
+            color: #007bff;
+            background-color: #e0e0e0;
+            padding: 10px 20px;
+            border-radius: 20px;
+        }
+
+       .odometer.odometer-auto-theme {
+            font-weight: bold;
+        }
+    </style>
+</head>
+
+<body background="/index_ background.png"
+    style="background-repeat:no-repeat
+    background-attachment:fixed;
+    background-size:100% 100%; ">
+</body>
+
+<body>
+    <h1 class="gradient-text">欢迎来到我的分享站</h1>
+    <div class="download-container">
+        <div class="github-badge-big">
+            <span class="badge-subject"><i class="fa fa-clock-o"></i> 🕒本网站已正常运行 </span>
+            <span class="badge-value bg-apricots">
+                <span id="blog_running_days" class="odometer odometer-auto-theme"></span>天
+                <span id="blog_running_hours" class="odometer odometer-auto-theme"></span>小时
+                <span id="blog_running_mins" class="odometer odometer-auto-theme"></span>分钟
+                <span id="blog_running_secs" class="odometer odometer-auto-theme"></span>秒
+                <span id="blog_running_msecs" class="odometer odometer-auto-theme"></span>毫秒
+            </span>
+            <script no-pjax="">
+                var blog_running_days = document.getElementById("blog_running_days");
+                var blog_running_hours = document.getElementById("blog_running_hours");
+                var blog_running_mins = document.getElementById("blog_running_mins");
+                var blog_running_secs = document.getElementById("blog_running_secs");
+                var blog_running_msecs = document.getElementById("blog_running_msecs");
+
+                function refresh_blog_running_time() {
+                    var time = new Date() - new Date(2024, 9, 3, 0, 0, 0, 0);
+                    var d = parseInt(time / 24 / 60 / 60 / 1000);
+                    var h = parseInt((time % (24 * 60 * 60 * 1000)) / 60 / 60 / 1000);
+                    var m = parseInt((time % (60 * 60 * 1000)) / 60 / 1000);
+                    var s = parseInt((time % (60 * 1000)) / 1000);
+                    var ms = parseInt((time % (1000 * 1)) / 1);
+                    blog_running_days.innerHTML = d;
+                    blog_running_hours.innerHTML = h;
+                    blog_running_mins.innerHTML = m;
+                    blog_running_secs.innerHTML = s;
+                    blog_running_msecs.innerHTML = ms;
+                }
+
+                refresh_blog_running_time();
+                if (typeof bottomTimeIntervalHasSet == "undefined") {
+                    var bottomTimeIntervalHasSet = true;
+                    setInterval(function () {
+                        refresh_blog_running_time();
+                    }, 1);
+                }
+            </script>
+        </div>
+    </div>
+</body>
+
+</html>
