--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>简易主页</title>
+    <title>分享站</title>
     <link rel = "icon" href = "/bitbug_favicon.ico" type = "image/x-icon">
     <style>
         body {
