--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>分享站</title>
-    <link rel = "icon" href = "/bitbug_favicon.ico" type = "image/x-icon">
+    <link rel="icon" href="/bitbug_favicon.ico" type="image/x-icon">
     <style>
         body {
             margin: 0;
@@ -51,17 +52,32 @@
        .odometer.odometer-auto-theme {
             font-weight: bold;
         }
+
+        a {
+            display: inline-block;
+            padding: 12px 24px;
+            background-color: #FFD700; /* 黄色 */
+            color: black;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+            margin-top: 10px; /* 进一步向上移动一点 */
+        }
+
+        a:hover {
+            background-color: #FFA500;
+        }
     </style>
 </head>
 
-<body background="/index_ background.png"
-    style="background-repeat:no-repeat
-    background-attachment:fixed;
-    background-size:100% 100%; ">
-</body>
-
-<body>
-    <h1 class="gradient-text">欢迎来到我的分享站</h1>
+<body background="/index_background.png" style="background-repeat:no-repeat;background-attachment:fixed;background-size:100% 100%;">
+    <h1 class="gradient-text">欢迎来到chenny与(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄的分享站</h1>
+    <div style="text-align: center;">
+        <a href="https://cyj.cmzprep.top/chenny.html" download>点击进入实用软件站</a>
+        <a href="https://cyj.cmzprep.top/flash.html" download>点击进入安卓刷机调试下载站</a>
+    </div>
+    
     <div class="download-container">
         <div class="github-badge-big">
             <span class="badge-subject"><i class="fa fa-clock-o"></i> 🕒本网站已正常运行 </span>
@@ -101,6 +117,13 @@
                     }, 1);
                 }
             </script>
+            </body>
+    </div>
+    <p style="text - align: center; margin - top: 20px;">网站制作人员：陈伊俊（QQ名:chenny;QQ:2501113185）、林（QQ名:林;QQ:757009986）</p>
+    <p style="text - align: center; margin - top: 20px;">技术支持：VSCode团队、GitHub所有团队、FoskfD(QQ：3828638473)</p>
+    <p style="text - align: center; margin - top: 20px;">QQ群：431982412</p>
+    </body>
+</body>
         </div>
     </div>
 </body>
