--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
     </style>
 </head>
 
-<body background="/index_background.png" style="background-repeat:no-repeat;background-attachment:fixed;background-size:100% 100%;">
+<body background="/index_ background.png"
+    style="background-repeat:no-repeat
+    background-attachment:fixed;
+    background-size:100% 100%; ">
+</body>
     <h1 class="gradient-text">欢迎来到chenny与(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄的分享站</h1>
     <div style="text-align: center;">
         <a href="https://cyj.cmzprep.top/chenny.html" download>点击进入实用软件站</a>
