--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 </body>
     <h1 class="gradient-text">欢迎来到chenny与(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄的分享站</h1>
     <div style="text-align: center;">
-        <a href="https://cyj.cmzprep.top/chenny.html" download>点击进入实用软件站</a>
-        <a href="https://cyj.cmzprep.top/flash.html" download>点击进入安卓刷机调试下载站</a>
+        <a href="https://cyj.cmzprep.top/chenny.html" >点击进入实用软件站</a>
+        <a href="https://cyj.cmzprep.top/flash.html" >点击进入安卓刷机调试下载站</a>
     </div>
     
     <div class="download-container">
