--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: Arial, sans-serif;
         }
 
-       .gradient-text {
+      .gradient-text {
             background-image: linear-gradient(to bottom, #ff6600, #ffcc00);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -26,7 +26,7 @@
             height: 100vh;
         }
 
-       .download-container {
+      .download-container {
             background-color: #fff;
             padding: 20px;
             border-radius: 8px;
@@ -35,13 +35,13 @@
             text-align: center;
         }
 
-       .github-badge-big.badge-subject {
+      .github-badge-big.badge-subject {
             font-size: 18px;
             color: #555;
             margin-bottom: 10px;
         }
 
-       .github-badge-big.badge-value {
+      .github-badge-big.badge-value {
             font-size: 24px;
             color: #007bff;
             background-color: #e0e0e0;
@@ -49,20 +49,22 @@
             border-radius: 20px;
         }
 
-       .odometer.odometer-auto-theme {
+      .odometer.odometer-auto-theme {
             font-weight: bold;
         }
 
         a {
             display: inline-block;
             padding: 12px 24px;
-            background-color: #FFD700; /* 黄色 */
+            background-color: #FFD700;
+            /* 黄色 */
             color: black;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
             box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-            margin-top: 10px; /* 进一步向上移动一点 */
+            margin-top: 10px;
+            /* 进一步向上移动一点 */
         }
 
         a:hover {
@@ -76,12 +78,12 @@
     background-attachment:fixed;
     background-size:100% 100%; ">
 </body>
-    <h1 class="gradient-text">欢迎来到chenny与(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄的分享站</h1>
-    <div style="text-align: center;">
-        <a href="https://www.123pan.com/s/Qqhgjv-IJpw3" download>实用软件站</a>
-        <a href="https://www.123pan.com/s/Qqhgjv-IJpw3" download>安卓刷机调试下载站</a>
-    </div>
     
+    <h1 class="gradient-text">欢迎来到 chenny 与(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄的分享站</h1>
+    <div style="text-align: center;">
+    <a href="https://cyj.cmzprep.top/chenny.html">实用软件分享站</a>
+    <a href="https://cyj.cmzprep.top/flash.html">安卓刷机调试下载站</a>
+    </div>
     <div class="download-container">
         <div class="github-badge-big">
             <span class="badge-subject"><i class="fa fa-clock-o"></i> 🕒本网站已正常运行 </span>
@@ -121,15 +123,11 @@
                     }, 1);
                 }
             </script>
-            </body>
-    </div>
-    <p style="text - align: center; margin - top: 20px;">网站制作人员：陈伊俊（QQ:2501113185）、林（QQ:757009986）、(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄  （QQ：2139748337）</p>
-    <p style="text - align: center; margin - top: 20px;">技术支持：VSCode团队、GitHub所有团队、FoskfD(QQ：3828638473)</p>
-    <p style="text - align: center; margin - top: 20px;">QQ交流群：431982412</p>
-    </body>
-</body>
         </div>
     </div>
+    <p style="text-align: center; margin-top: 20px;">网站制作人员：陈伊俊（QQ:2501113185）、林（QQ:757009986）、(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ （QQ：2139748337）</p>
+    <p style="text-align: center; margin-top: 20px;">技术支持：VSCode 团队、GitHub 所有团队、FoskfD(QQ：3828638473)</p>
+    <p style="text-align: center; margin-top: 20px;">QQ 交流群：431982412</p>
 </body>
 
 </html>
