--- a/flash.html
+++ b/flash.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>安卓刷机破解下载站</title>
     <h1 style="text-align:center">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄制作的安卓刷机调试下载站</h1>
     <h3 style="text-align:center;">当前版本：V2.0 ©️(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ </h3>
