--- a/flash.html
+++ b/flash.html
@@ -119,7 +119,7 @@
 </body>
 <br>
 <body>
-    <p style="color: darkorchid">网站主作人员：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄  网站辅助人员：㍿ 下载站文件提供：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄</p>
+    <p style="color: darkorchid">网站主作人员：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄  网站辅助人员：㍿ 下载站文件提供：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ (由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ 收集整理，并非制作，若有侵权请联系删除)</p>
     <p style="color: darkorchid">技术支持：GitHub & openfrp & 123云盘 对赞助及支持者鸣谢！</p>
 </body>
 
