--- a/chenny.html
+++ b/chenny.html
@@ -105,8 +105,8 @@
             <a href="https://www.123pan.com/s/Qqhgjv-PJpw3" download>点击下载</a>
         </div>
         <div>
-            <h3>删除Windows defender工具</h3>
-            <p>软件描述：windows defender是微软公司推出的杀毒软件，它可以帮助你保护你的电脑不被恶意软件侵害，但它也会带来一些问题，比如你下载了一个软件，windows defender会莫名其妙的将其删除，这时你就无法使用软件，这时就需要删除windows defender工具来解决这个问题</p>
+            <h3>删除Windows Defender工具</h3>
+            <p>软件描述：Windows Defender是微软公司推出的杀毒软件，它可以帮助你保护你的电脑不被恶意软件侵害，但它也会带来一些问题，比如你下载了一个软件，windows defender会莫名其妙的将其删除，这时你就无法使用软件，这时就需要删除windows defender工具来解决这个问题</p>
             <a href="https://www.123pan.com/s/Qqhgjv-XJpw3" download>点击下载</a>
         </div>
         <div>
@@ -128,6 +128,11 @@
             <h3>BandZip</h3>
             <p>软件描述：Bandizip 是一款可靠和快速的压缩软件，支持中文，支持 WinZip、7-Zip 和 Winrar 以及其它压缩格式。拥有非常快速的压缩和解压缩的算法，适用于多核心压缩、快速拖放、高速压缩等功能</p>
             <a href="https://www.123865.com/s/Qqhgjv-JGpw3" download>点击下载</a>
+        </div>
+        <div>
+            <h3>MSI Afterburner</h3>
+            <p>软件描述：MSI Afterburner是微星联合Guru3D网站共同开发的一款显卡超频工具，支持微星旗下的AMD和NVIDIA全系列显卡。软件拥有显卡超频、视频摄录、风扇控制等多项功能，有效提高用户电脑的显卡性能，带给用户顺畅的使用体验</p>
+            <a href="https://www.123pan.com/s/Qqhgjv-YPpw3" download>点击下载</a>
         </div>
 </body>
 
