--- a/flash.html
+++ b/flash.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>安卓刷机破解下载站</title>
-    <h1 style="text-align:center">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄制作的安卓刷机调试下载站</h1>
+    <h1 style="text-align:center">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄の安卓刷机调试下载站</h1>
     <h3 style="text-align:center;">当前版本：V2.0 ©️(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ </h3>
     <h3 style="text-align:center;">作者QQ:2139748337</h3>
     <h4 style="text-align:center">新下载站地址：https://cyj.cmzprep.top/flash.html  不要记错啦！</h4>
