--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
     background-size:100% 100%; ">
 </body>
     
-    <h1 class="gradient-text">欢迎来到 chenny 与(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄的分享站</h1>
+    <h1 class="gradient-text">欢迎来到分享站</h1>
     <div style="text-align: center;">
     <a href="https://cyj.cmzprep.top/chenny.html">实用软件分享站</a>
     <a href="https://cyj.cmzprep.top/flash.html">安卓刷机调试下载站</a>
+    <a href="https://cyj.cmzprep.top/web.html">有趣网址分享站</a>
     </div>
     <div class="download-container">
         <div class="github-badge-big">
@@ -130,5 +131,5 @@
     <p style="text-align: center; margin-top: 20px;">QQ 交流群：431982412</p>
     </div>
 </body>
-
+    
 </html>
