--- a/flash.html
+++ b/flash.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>安卓刷机破解下载站</title>
-    <h1 style="text-align:center">欢迎来到由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄の安卓刷机调试下载站</h1>
-    <h3 style="text-align:center;">当前版本：V2.0 ©️(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ </h3>
+    <h1 style="text-align:center">欢迎来到由Cool.の安卓刷机调试下载站</h1>
+    <h3 style="text-align:center;">当前版本：V2.0 ©️Cool.</h3>
     <h3 style="text-align:center;">作者QQ:2139748337</h3>
     <h4 style="text-align:center">新下载站地址：https://cyj.cmzprep.top/flash.html  不要记错啦！</h4>
     <p style="text-align: center; color: red;">此网站仅为个人创作，请勿用于商业！</p>
@@ -79,9 +79,9 @@
         <a href="https://www.123pan.com/s/k4tFTd-WATZh?">点击下载</a>
     </body>
     <body>
-        <h3>4.Scrcpy(gui版)</h3>
+        <h3>4.Scrcpy</h3>
         <p>简介：Scrcpy是一个可以在电脑上查看和控制设备的实用软件，设备打开USB调试连接即可，比无线的延时率要低很多，方便自己或他人调试设备！</p>
-        <a href="https://www.123pan.com/s/k4tFTd-OATZh?">点击下载</a>
+        <a href="https://www.123pan.com/s/k4tFTd-gBTZh?">点击下载</a>
     </body>
     </div>
     <br>
@@ -119,7 +119,7 @@
 </body>
 <br>
 <body>
-    <p style="color: darkorchid">网站主作人员：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄  网站辅助人员：㍿ 下载站文件提供：(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ (由(̿▀̿ ̿Ĺ̯̿̿▀̿ ̿)̄ 收集整理，并非制作，若有侵权请联系删除)</p>
+    <p style="color: darkorchid">网站主作人员：Cool. 网站辅助人员：chenny 下载站文件提供：Cool.(由Cool.收集整理，并非制作，若有侵权请联系删除)</p>
     <p style="color: darkorchid">技术支持：GitHub & openfrp & 123云盘 对赞助及支持者鸣谢！</p>
 </body>
 
