--- a/flash.html
+++ b/flash.html
@@ -119,18 +119,47 @@
 </body>
 <br>
 <body>
-    <p style="color: darkorchid">网站主作人员：Cool. 网站辅助人员：chenny 下载站文件提供：Cool.(由Cool.收集整理，并非制作，若有侵权请联系删除)</p>
+    <p style="color: darkorchid">网站主作人员：Cool. 网站辅助人员：chenny(QQ:2501113185) 下载站文件提供：Cool.(由Cool.收集整理，并非制作，若有侵权请联系删除)</p>
     <p style="color: darkorchid">技术支持：GitHub & openfrp & 123云盘 对赞助及支持者鸣谢！</p>
 </body>
 
-<script>
-    if (localStorage.getItem('visitCount')) {
-        var count = parseInt(localStorage.getItem('visitCount')) + 1;
-        localStorage.setItem('visitCount', count);
-    } else {
-        localStorage.setItem('visitCount', 1);
-    }
-    var visitCountElement = document.createElement('p');
-    visitCountElement.textContent = '本网站个人访问次数：' + localStorage.getItem('visitCount');
-    document.body.appendChild(visitCountElement);
-</script>
+
+<div class="download-container">
+    <div class="github - badge - big">
+        <span class="badge - subject"><i class="fa fa - clock - o"></i> 🕒本网站已正常运行 </span>
+        <span class="badge - value bg - apricots">
+            <span id="blog_running_days" class="odometer odometer - auto - theme"></span>天
+            <span id="blog_running_hours" class="odometer odometer - auto - theme"></span>小时
+            <span id="blog_running_mins" class="odometer odometer - auto - theme"></span>分钟
+            <span id="blog_running_secs" class="odometer odometer - auto - theme"></span>秒
+            <span id="blog_running_msecs" class="odometer odometer - auto - theme"></span>毫秒
+        </span>
+        <script no - pjax="">
+            var blog_running_days = document.getElementById("blog_running_days");
+            var blog_running_hours = document.getElementById("blog_running_hours");
+            var blog_running_mins = document.getElementById("blog_running_mins");
+            var blog_running_secs = document.getElementById("blog_running_secs");
+            var blog_running_msecs = document.getElementById("blog_running_msecs");
+            function refresh_blog_running_time() {
+                var time = new Date() - new Date(2024, 9, 3, 0, 0, 0, 0);
+                var d = parseInt(time / 24 / 60 / 60 / 1000);
+                var h = parseInt((time % (24 * 60 * 60 * 1000)) / 60 / 60 / 1000);
+                var m = parseInt((time % (60 * 60 * 1000)) / 60 / 1000);
+                var s = parseInt((time % (60 * 1000)) / 1000);
+                var ms = parseInt((time % (1000 * 1)) / 1);
+                blog_running_days.innerHTML = d;
+                blog_running_hours.innerHTML = h;
+                blog_running_mins.innerHTML = m;
+                blog_running_secs.innerHTML = s;
+                blog_running_msecs.innerHTML = ms;
+            }
+            refresh_blog_running_time();
+            if (typeof bottomTimeIntervalHasSet == "undefined") {
+                var bottomTimeIntervalHasSet = true;
+                setInterval(function () {
+                    refresh_blog_running_time();
+                }, 1);
+            }
+        </script>
+    
+    </html>
