--- a/chenny.html
+++ b/chenny.html
@@ -134,7 +134,12 @@
             <p>软件描述：MSI Afterburner是微星联合Guru3D网站共同开发的一款显卡超频工具，支持微星旗下的AMD和NVIDIA全系列显卡。软件拥有显卡超频、视频摄录、风扇控制等多项功能，有效提高用户电脑的显卡性能，带给用户顺畅的使用体验</p>
             <a href="https://www.123pan.com/s/Qqhgjv-YPpw3" download>点击下载</a>
         </div>
-</body>
+        <div>
+            <h3>ODE多功能助手</h3>
+            <p>软件描述：ODE多功能助手是一款百度网盘下载工具，目前还在开发阶段，但已实现百度网盘解析下载功能。用户可以提前使用该功能进行百度网盘文件的下载</p>
+            <a href="https://www.123pan.com/s/Qqhgjv-Fspw3" download>点击下载</a>
+        </div>
+        </body>
 
 </body>
     </div>
