--- a/chenny.html
+++ b/chenny.html
@@ -137,7 +137,7 @@
         <div>
             <h3>ODE多功能助手</h3>
             <p>软件描述：ODE多功能助手是一款百度网盘下载工具，目前还在开发阶段，但已实现百度网盘解析下载功能。用户可以提前使用该功能进行百度网盘文件的下载</p>
-            <a href="https://www.123pan.com/s/Qqhgjv-Fspw3" download>点击下载</a>
+            <a href="https://www.123pan.com/s/Qqhgjv-Xspw3" download>点击下载</a>
         </div>
         </body>
 
