--- a/web.html
+++ b/web.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>有趣网址分享站</title>
+    <title>有趣网站分享站</title>
     <link rel="icon" href="/bitbug_favicon.ico" type="image/x-icon">
     <style>
         body {
@@ -85,6 +85,11 @@
             <h3>bolt.new</h3>
             <p>网站描述：这是一个很棒的 AI 网站，结合了 AI 与 WebContainers 技术的强大开发平台，允许用户快速搭建并开发各种类型的全栈应用。它的主要特点是无需复杂的开发环境配置，你可以直接通过网页端在线完成从编写代码到部署应用的所有步骤，极大地方便了开发过程。Bolt․new 旨在为开发者提供一个轻量级、基于浏览器的全栈开发环境。你可以通过简单的提示创建、编辑、运行和部署复杂的全栈应用，而且全部在浏览器中完成整个开发流程，不需要安装额外的软件。这意味着，你只要有一个浏览器，就能创建、编辑、运行、调试并发布完整的应用程序。</p>
             <a href="https://bolt.new/">点击进入</a>
+        </div>
+        <div>
+            <h3>豆包</h3>
+            <p>网站描述：豆包是一个基于 AI 的智能问答机器人，它可以自动回答用户的提问，并提供相关的知识解答。豆包的知识库由海量的互联网数据和 AI 算法驱动，可以快速准确地回答用户的疑问。豆包的界面简洁、操作简单，适合于各种场景的使用。你可以通过豆包的网站、微信公众号、小程序、APP 等渠道进行使用。</p>
+            <a href="https://www.doubao.com/">点击进入</a>
         </div>
     </div>
     <div class="reward-container">
