--- a/web.html
+++ b/web.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>有趣网站分享站</title>
+    <title>有趣网址分享站</title>
     <link rel="icon" href="/bitbug_favicon.ico" type="image/x-icon">
     <style>
         body {
@@ -90,6 +90,11 @@
             <h3>豆包</h3>
             <p>网站描述：豆包是一个基于 AI 的智能问答机器人，它可以自动回答用户的提问，并提供相关的知识解答。豆包的知识库由海量的互联网数据和 AI 算法驱动，可以快速准确地回答用户的疑问。豆包的界面简洁、操作简单，适合于各种场景的使用。你可以通过豆包的网站、微信公众号、小程序、APP 等渠道进行使用。</p>
             <a href="https://www.doubao.com/">点击进入</a>
+        </div>
+        <div>
+            <h3>v0</h3>
+            <p>网站描述：v0 是一个基于 AI 的智能聊天机器人，它可以自动回复用户的消息，并提供相关的知识解答。v0 的知识库由海量的互联网数据和 AI 算法驱动，可以快速准确地回复用户的消息。v0 的界面简洁、操作简单，适合于各种场景的使用。你可以通过 v0 的网站、微信公众号、小程序、APP 等渠道进行使用。</p>
+            <a href="https://v0.dev">点击进入</a>
         </div>
     </div>
     <div class="reward-container">
