--- a/web.html
+++ b/web.html
@@ -66,7 +66,7 @@
 
         a {
             text-decoration: none;
-            color: blue;
+            color: #007bff;
         }
     </style>
 </head>
