--- a/web.html
+++ b/web.html
@@ -71,11 +71,14 @@
     </style>
 </head>
 
-<body background="/index_ background.png"
-    style="background-repeat:no-repeat
-    background-attachment:fixed;
-    background-size:100% 100%; ">
-</body>
+<style>
+    body {
+        background-image: url("/index_background.png");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+    }
+</style>
 
     <h1>欢迎来到 chenny 的有趣网址分享站</h1>
     <p style="text-align: center; color: red;">注意：进入网站错误请联系网站制作人员！以下网站不是 chenny（QQ 名）制作，仅供学习交流使用！</p>
