--- a/web.html
+++ b/web.html
@@ -96,7 +96,15 @@
             <p>网站描述：v0 是一个基于 AI 的智能聊天机器人，它可以自动回复用户的消息，并提供相关的知识解答。v0 的知识库由海量的互联网数据和 AI 算法驱动，可以快速准确地回复用户的消息。v0 的界面简洁、操作简单，适合于各种场景的使用。你可以通过 v0 的网站、微信公众号、小程序、APP 等渠道进行使用。</p>
             <a href="https://v0.dev">点击进入</a>
         </div>
-    </div>
+        <div>
+            <h3>小浣熊家族Raccoon</h3>
+            <p>网站描述：小浣熊家族Raccoon有两大板块，分别是“代码小浣熊”和“办公小浣熊”；代码小浣熊Raccoon是由商汤科技推出的的免费的智能AI编程助手，该工具由商汤科技自主研发的日日新大模型提供动力。不仅支持多种编程语言，还具备执行多种任务的能力，为开发者带来了前所未有的编程体验。代码小浣熊Raccoon集成了众多智能代码生成和辅助工具，覆盖了从软件需求分析、架构设计、代码编写到软件测试的整个开发周期。它能够满足程序员在代码编写、数据分析以及编程学习等多个方面的需求，为编程工作提供了全面的解决方案；办公小浣熊Raccoon是基于商汤大语言模型的大模型原生数据分析产品，它可以通过用户的自然语言输入，结合商汤大模型的能力，自动将数据转化为有意义的分析和可视化结果。办公小浣熊支持复杂表格、多表格、多文件的理解，可以完成数据清洗、数据运算、比较分析、趋势分析，预测性分析、可视化等常见数据分析任务，赋能财务分析、商业分析、销售预测、市场分析、宏观分析等多个应用场景</p>
+            <a href="https://xiaohuanxiong.com">点击进入</a>
+        </div>
+        <div>
+            <h3>豆包MarsCode</h3>
+            <p>网站描述：豆包MarsCode是由字节跳动公司开发的免费人工智能编程辅助工具，不仅提供了一个由AI驱动的云端集成开发环境（IDE），还可以作为VS Code和JetBrains的智能编程插件使用。该工具通过AI助手实现代码补全、生成和优化，支持云函数的开发，并配备了API测试、存储和部署工具，能够自动创建JSON Schema。MarsCode插件支持多种主流编程语言和IDE，提供代码编辑、解释、注释生成、单元测试创建、错误修复等辅助功能，有效提升了编程效率和代码质量，覆盖了后端、前端、App开发等多种编程语言和框架</p>
+        </div>
     <div class="reward-container">
         <h1>如果您觉得这个网站有对你产生帮助，请支持一下吧，你的支持是我更新网站的动力！</h1>
         <img src="/46F279156812A4B54AE2791AFE8A38BF.jpg" alt="微信打赏二维码" width="300" height="400">
