--- a/chenny.html
+++ b/chenny.html
@@ -66,8 +66,13 @@
     <div class="download-container">
         <div>
             <h3>Geek Uninstaller</h3>
-            <p>软件描述：一款强大的卸载工具，可以将残留文件扫描出来，且将删除</p>
+            <p>软件描述：Geek Uninstaller是一款非常不错的软件卸载小工具，使用geek ninstaller用户们就可以轻松的将电脑中所有没必要存在的垃圾全部轻松清理了，然后垃圾都会被快速清理(比某某面板里的卸载强多了)</p>
             <a href="https://www.123pan.com/s/Qqhgjv-IJpw3" download>点击下载</a>
+        </div>
+        <div>
+            <h3>Uninstall Tool</h3>
+            <p>软件描述：Uninstall Tool是CrystalIdea Software出品的一款强大而灵活的应用程序卸载软件，支持软件本身的默认卸载程序卸载完毕后再扫描软件残留的注册表项及残余文件，将待卸载的应用程序彻底从当前系统环境中移除。软件还可以监视每个应用程序的安装，实时监视应用程序安装在系统中的任何文件及注册表项目</p>
+            <a href="https://www.123865.com/s/Qqhgjv-5Upw3" donload>点击下载</a>
         </div>
         <div>
             <h3>Bongo Cat Mver（有皮肤）</h3>
