--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>由于唐人街会长（王一）将 唐人协会 解散，此官网将无法提供网络宣传支持，直到会长重新举办唐人街成立仪式！</title>
+    <title>404 Not Found!</title>
 </head>
 <body>
-    <h1>404 Not Found!</h1>
+    <h1>由于唐人街会长（王一）将 唐人协会 解散，此官网将无法提供网络宣传支持，直到会长重新举办唐人街成立仪式！</h1>
 </body>
 </html>
