--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>404 Not Found!</title>
 </head>
 <body>
-    <h1>由于唐人街会长（王一）将 唐人协会 解散，此官网将无法提供网络宣传支持，直到会长重新举办唐人街成立仪式！</h1>
+    <h1>由于唐人街会长（王一）将 唐人协会 解散，此官网将无法提供网络宣传支持，直到会长重新举办唐人街成立仪式！(到6月6日以后作废！)</h1>
 </body>
 </html>
